Update UI, add pictures and make phone number reference to whatsapp.

--- a/index.html
+++ b/index.html
@@ -111,27 +111,27 @@
       >
         <a
           href="#heroSection"
-          class="text-pink-500 hover:text-pink-700 transition text-lg font-rubik"
+          class="text-pink-500 font-bold hover:text-pink-700 transition text-lg font-rubik"
           >דף הבית</a
         >
         <a
           href="#about"
-          class="text-pink-500 hover:text-pink-700 transition text-lg font-rubik"
+          class="text-pink-500 font-bold hover:text-pink-700 transition text-lg font-rubik"
           >אודות</a
         >
         <a
           href="#services"
-          class="text-pink-500 hover:text-pink-700 transition text-lg"
+          class="text-pink-500 font-bold hover:text-pink-700 transition text-lg"
           >שירותים</a
         >
         <a
           href="#recommendations"
-          class="text-pink-500 hover:text-pink-700 transition text-lg"
+          class="text-pink-500 font-bold hover:text-pink-700 transition text-lg"
           >המלצות</a
         >
         <a
           href="#contact"
-          class="text-pink-500 hover:text-pink-700 transition text-lg"
+          class="text-pink-500 font-bold hover:text-pink-700 transition text-lg"
           >צור קשר</a
         >
       </nav>
@@ -157,39 +157,39 @@
     <!-- 🩺 About Section -->
     <section
       id="about"
-      class="p-6 max-w-7xl mx-auto bg-gradient-to-r from-pink-500 via-pink-400 to-pink-300 rounded-md shadow my-10 flex items-center space-x-6 rtl:space-x-reverse"
+      class="p-6 max-w-7xl mx-auto bg-gradient-to-r bg-[#fdf3ec] rounded-md shadow my-10 flex items-center space-x-6 rtl:space-x-reverse"
     >
       <!-- About Text-->
       <div class="w-full md:w-1/2 text-right about-text opacity-1">
-        <h2 class="text-white text-2xl font-bold mb-4">אודות הקליניקה</h2>
-        <h3 class="text-white text-xl font-semibold mb-2">
+        <h2 class="text-black text-2xl font-bold mb-4">אודות הקליניקה</h2>
+        <h3 class="text-black text-xl font-semibold mb-2">
           מומחיות רפואית, יופי ואסתטיקה:
         </h3>
-        <p class="text-white mb-4">
+        <p class="text-black mb-4">
           ד"ר גיל משה פינקלשטיין –את לימודים הרפואה סיים בהצטיינות בהמשך התמחה
           ברפואת עיניים בבית חולים נהריה וכעת עובד כמומחה לרפואת עיניים במרפאות
           בצפון. ד"ר גיל משה פינקלשטיין הוא מומחה בעל שם בתחום רפואת העיניים,
           בעל רישיונות רפואה ישראליים ואירופאיים. ניסיונו העשיר ברפואת עיניים
           תורם רבות להבנת האנטומיה של הפנים, דבר חיוני בתחום האסתטיקה הרפואית.
         </p>
-        <p class="text-white mb-4">
+        <p class="text-black mb-4">
           ד"ר אביה פינקלשטיין רופאת משפחה מומחית, בעלת הכשרה וידע מעמיקים בתחום
           העור והאסתטיקה הרפואית. את לימודי הרפואה סיימה בהצטיינות וכעת עובדת
           במרפאות בצפון כמומחיות ברפואת משפחה. בנוסף עברה הכשרות בתחום העור
           בטכניון. מומחיותה מאפשרת לה להבין את ההיבטים הרפואיים הכוללים, ולהתאים
           את הטיפול האסתטי לכל מטופל באופן איש תוך הבנה וידע מעמיק למצב בריאותו.
         </p>
-        <h3 class="text-white text-xl font-semibold mb-2">
+        <h3 class="text-black text-xl font-semibold mb-2">
           הידע והמומחיות שלנו:
         </h3>
-        <p class="text-white mb-4">
+        <p class="text-black mb-4">
           הצוות שלנו מתמחה במגוון רחב של טיפולים אסתטיים, תוך התחשבות במחלות
           עיניים, אנטומיה של הפנים, מחלות מערכתיות ותרופות. אנו משתתפים באופן
           קבוע בכנסים מקצועיים בארץ ובעולם, ומשתפים פעולה עם החברות המובילות
           בתחום האסתטיקה הרפואית, על מנת להבטיח שאנו מעניקים לכם את הטיפולים
           החדשניים והיעילים ביותר.
         </p>
-        <p class="text-white mb-4">
+        <p class="text-black mb-4">
           אנו מחויבים להעניק לכם טיפול אישי, מקצועי ובטוח, תוך שימוש בטכנולוגיות
           המתקדמות ביותר ובהתאם לסטנדרטים הגבוהים ביותר. אנו מאמינים שיופי אמיתי
           מתחיל מבפנים, ולכן אנו שמים דגש על הבנת הצרכים האישיים של כל מטופל,
@@ -204,18 +204,23 @@
           class="relative overflow-hidden rounded-md shadow-md h-[700px] mx-auto max-w-[90%] sm:max-w-[500px] w-full"
         >
           <img
-            src="pictures/clinic/clinic_1.jpeg"
+            src="pictures/clinic/clinic_4.jpeg"
             alt="תמונה 1"
             class="about_slide left-1/2 top-1/2 translate-x-[-50%] translate-y-[-50%] absolute w-full h-full object-cover opacity-100 transition-opacity duration-700"
           />
           <img
-            src="pictures/clinic/clinic_2.jpeg"
+            src="pictures/clinic/clinic_5.jpeg"
             alt="תמונה 2"
             class="about_slide left-1/2 top-1/2 translate-x-[-50%] translate-y-[-50%] absolute w-full h-full object-cover opacity-100 transition-opacity duration-700"
           />
           <img
-            src="pictures/clinic/clinic_3.jpeg"
+            src="pictures/clinic/clinic_6.jpeg"
             alt="תמונה 3"
+            class="about_slide left-1/2 top-1/2 translate-x-[-50%] translate-y-[-50%] absolute w-full h-full object-cover opacity-100 transition-opacity duration-700"
+          />
+          <img
+            src="pictures/clinic/clinic_7.jpeg"
+            alt="תמונה 4"
             class="about_slide left-1/2 top-1/2 translate-x-[-50%] translate-y-[-50%] absolute w-full h-full object-cover opacity-100 transition-opacity duration-700"
           />
         </div>
@@ -239,7 +244,7 @@
     <!-- 💉 Services Section -->
     <section
       id="services"
-      class="p-8 max-w-7xl mx-auto bg-white rounded-md shadow mb-10"
+      class="p-8 max-w-7xl mx-auto bg-[#fdf3ec] rounded-md shadow mb-10"
     >
       <h2 class="text-2xl font-bold mb-6 text-center">השירותים שלנו</h2>
       <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
@@ -277,7 +282,7 @@
         </div>
         <!-- Service 4 Prp -->
         <div class="service-item text-center">
-          <h3 class="text-lg font-semibold mb-2">Prp</h3>
+          <h3 class="text-lg font-semibold mb-2">PRP</h3>
           <img
             src="pictures/servicies/prp.jpeg"
             alt="prp"
@@ -291,7 +296,7 @@
     <!-- Placeholder for the Selected Service Description -->
     <section
       id="selected-service"
-      class="p-8 max-w-7xl mx-auto bg-white-100 rounded-md shadow mb-10 hidden"
+      class="p-8 max-w-7xl mx-auto bg-[#fdf3ec]-100 rounded-md shadow mb-10 hidden"
     >
       <!-- Content will be dynamically inserted here -->
     </section>
@@ -299,7 +304,7 @@
     <!-- Before-After Section -->
     <section
       id="before-after"
-      class="p-8 max-w-7xl mx-auto bg-white rounded-md shadow mb-10 hidden justify-center"
+      class="p-8 max-w-7xl mx-auto bg-[#fdf3ec] rounded-md shadow mb-10 hidden justify-center"
     >
       <h2 class="text-2xl font-bold mb-6 text-center">לפני ואחרי</h2>
       <div class="relative overflow-hidden rounded-md shadow-md">
@@ -327,7 +332,7 @@
     <!-- 📝 Recommendations Section -->
     <section
       id="recommendations"
-      class="p-8 max-w-7xl mx-auto bg-pink-100 rounded-md shadow mb-10"
+      class="p-8 max-w-7xl mx-auto bg-[#fdf3ec] rounded-md shadow mb-10"
     >
       <h2 class="text-2xl font-bold mb-6 text-center">המלצות</h2>
       <div class="relative overflow-hidden">
@@ -357,14 +362,20 @@
     <!-- 📞 Contact Section -->
     <section
       id="contact"
-      class="p-8 max-w-7xl mx-auto bg-pink-300 rounded-md shadow mb-10 flex flex-col md:flex-row justify-between"
+      class="p-8 max-w-7xl mx-auto bg-[#fdf3ec] rounded-md shadow mb-10 flex flex-col md:flex-row justify-between"
     >
       <!-- Contact Info -->
       <div class="w-full md:w-1/2 mb-6 md:mb-0">
         <h2 class="text-2xl font-bold mb-4">לייעוץ והתאמה ללא עלות:</h2>
         <p class="text-lg mb-2">📍 כתובת: האלון 16, טל-אל, ישראל</p>
-        <p class="text-lg mb-2">📞 055-5641758</p>
-        <p class="text-lg">✉️ gilfingil@gmail.com</p>
+        <a
+          href="https://wa.me/972555641758"
+          target="_blank"
+          class="text-lg mb-2 text-pink-600 hover:underline"
+        >
+          📞 055-5641758
+        </a>
+        <p class="text-lg">✉️ drfinkelsteinclinics@gmail.com</p>
       </div>
 
       <!-- User Input Form -->
