--- a/index.html
+++ b/index.html
@@ -374,7 +374,13 @@
       <div class="w-full md:w-1/2 mb-6 md:mb-0">
         <h2 class="text-2xl font-bold mb-4">לייעוץ והתאמה ללא עלות:</h2>
         <p class="text-lg mb-2">📍 כתובת: האלון 16, טל-אל, ישראל</p>
-        <p class="text-lg mb-2">📞 055-5641758</p>
+        <a
+          href="https://wa.me/972555641758"
+          target="_blank"
+          class="text-lg mb-2 text-pink-600 hover:underline"
+        >
+          📞 055-5641758
+        </a>
         <p class="text-lg">✉️ gilfingil@gmail.com</p>
       </div>
 
