make mail click to send new mail.

--- a/index.html
+++ b/index.html
@@ -374,14 +374,23 @@
       <div class="w-full md:w-1/2 mb-6 md:mb-0">
         <h2 class="text-2xl font-bold mb-4">לייעוץ והתאמה ללא עלות:</h2>
         <p class="text-lg mb-2">📍 כתובת: האלון 16, טל-אל, ישראל</p>
-        <a
-          href="https://wa.me/972555641758"
-          target="_blank"
-          class="text-lg mb-2 text-pink-600 hover:underline"
-        >
-          📞 055-5641758
-        </a>
-        <p class="text-lg">✉️ gilfingil@gmail.com</p>
+        <p>
+          <a
+            href="https://wa.me/972555641758"
+            target="_blank"
+            class="text-lg mb-2 text-pink-600 hover:underline"
+          >
+            📞 055-5641758
+          </a>
+        </p>
+        <p>
+          <a
+            href="mailto:drfinkelsteinclinics@gmail.com"
+            class="text-lg text-pink-600 hover:underline"
+          >
+            ✉️ drfinkelsteinclinics@gmail.com
+          </a>
+        </p>
       </div>
 
       <!-- User Input Form -->
