--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
       <h2 class="text-2xl font-bold mb-6 text-center">לפני ואחרי</h2>
       <div class="relative overflow-hidden rounded-md shadow-md">
         <!-- Slideshow Container -->
-        <div id="beforeAfterSlideshow" class="mx-auto">
+        <div id="beforeAfterSlideshow" class="mx-auto min-h-[400px]">
           <!-- Images will be dynamically inserted here -->
         </div>
 
