--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
         </p>
         <p>
           <a
-            href="https://wa.me/972555641758"
+            href="https://wa.me/972555641758?text=שלום,%20אני%20מעונין%20בייעוץ"
             target="_blank"
             class="text-lg mb-2 text-pink-600 hover:underline"
           >
