--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
       <!-- Mobile Title Overlay -->
       <h1
-        class="clinic-title absolute top-8 right-0 left-0 text-center text-3xl font-bold text-[#44291F] md:hidden z-10"
+        class="clinic-title absolute top-8 right-0 left-0 text-center text-3xl font-bold md:hidden z-10"
       >
         Dr. Finkelstein Clinics
       </h1>
@@ -389,7 +389,7 @@
         </p>
         <p>
           <a
-            href="https://wa.me/972555641758?text=שלום,%20אני%20מעונין%20בייעוץ"
+            href="https://wa.me/972555641758?text=שלום,%20אשמח%20לקבל%20ייעוץ"
             target="_blank"
             class="text-lg mb-2 text-pink-600 hover:underline"
           >
