--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             מומחיות רפואית, יופי ואסתטיקה:
           </h3>
           <p class="text-black mb-4">
-            ד"ר גיל משה פינקלשטיין –את לימודים הרפואה סיים בהצטיינות בהמשך התמחה
+            ד"ר גיל משה פינקלשטיין- את לימודי הרפואה סיים בהצטיינות. בהמשך התמחה
             ברפואת עיניים בבית חולים נהריה וכעת עובד כמומחה לרפואת עיניים
             במרפאות בצפון. ד"ר גיל משה פינקלשטיין הוא מומחה בעל שם בתחום רפואת
             העיניים, בעל רישיונות רפואה ישראליים ואירופאיים. ניסיונו העשיר
@@ -181,7 +181,7 @@
             האסתטיקה הרפואית.
           </p>
           <p class="text-black mb-4">
-            ד"ר אביה פינקלשטיין רופאת משפחה מומחית, בעלת הכשרה וידע מעמיקים
+            ד"ר אביה פינקלשטיין- רופאת משפחה מומחית, בעלת הכשרה וידע מעמיקים
             בתחום העור והאסתטיקה הרפואית. את לימודי הרפואה סיימה בהצטיינות וכעת
             עובדת במרפאות בצפון כמומחיות ברפואת משפחה. בנוסף עברה הכשרות בתחום
             העור בטכניון. מומחיותה מאפשרת לה להבין את ההיבטים הרפואיים הכוללים,
