Add whatsapp icon and number to the contact section.

--- a/index.html
+++ b/index.html
@@ -376,32 +376,49 @@
       class="p-8 max-w-7xl mx-auto bg-[#fdf3ec] rounded-md shadow mb-10 flex flex-col md:flex-row justify-between"
     >
       <!-- Contact Info -->
-      <div class="w-full md:w-1/2 mb-6 md:mb-0">
+      <div class="w-full md:w-1/2 mb-6 md:mb-0 text-right">
         <h2 class="text-2xl font-bold mb-4">לייעוץ והתאמה ללא עלות:</h2>
+
+        <!-- Location -->
         <p>
           <a
             href="https://www.google.com/maps?q=האלון+16+טל-אל+ישראל"
             target="_blank"
-            class="text-lg mb-2 text-pink-600 hover:underline"
+            class="text-lg mb-2 text-pink-600 hover:underline inline-flex items-center gap-1"
           >
-            📍 כתובת: האלון 16 , טל-אל, ישראל
+            <span>📍</span> כתובת: האלון 16 , טל-אל, ישראל
           </a>
         </p>
+
+        <!-- Phone Number -->
         <p>
           <a
-            href="https://wa.me/972555641758?text=שלום,%20אשמח%20לקבל%20ייעוץ"
-            target="_blank"
-            class="text-lg mb-2 text-pink-600 hover:underline"
+            href="tel:0555641758"
+            class="text-lg mb-2 text-pink-600 hover:underline inline-flex items-center gap-2"
           >
             📞 055-5641758
           </a>
         </p>
+
+        <!-- WhatsApp -->
+        <p class="relative right-1">
+          <a
+            href="https://wa.me/972555641758?text=שלום,%20אשמח%20לקבל%20ייעוץ"
+            target="_blank"
+            class="text-lg mb-2 text-pink-600 hover:underline inline-flex items-center gap-2"
+          >
+            <i class="fab fa-whatsapp text-green-600"></i>
+            055-5641758
+          </a>
+        </p>
+
+        <!-- Mail -->
         <p>
           <a
             href="mailto:drfinkelsteinclinics@gmail.com"
-            class="text-lg text-pink-600 hover:underline"
+            class="text-lg text-pink-600 hover:underline inline-flex items-center gap-2"
           >
-            ✉️ drfinkelsteinclinics@gmail.com
+            <span>✉️</span> drfinkelsteinclinics@gmail.com
           </a>
         </p>
       </div>
