Add "consulation" selection in treatments.

--- a/index.html
+++ b/index.html
@@ -499,6 +499,7 @@
                 <option value="skinBooster">סקין בוסטר</option>
                 <option value="hyaluronicAcid">חומצה היאלורונית</option>
                 <option value="prp">Prp</option>
+                <option value="cunsulation">פגישת ייעוץ</option>
               </select>
             </div>
           </div>
