Add Structured data (schema markup).

--- a/index.html
+++ b/index.html
@@ -14,6 +14,36 @@
               חומצה היאלורונית. 
               סקין בוסטר. PRP. "
     />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "MedicalClinic",
+        "name": "מרפאות דוקטור פינקלשטיין",
+        "image": "https://drfinkelstein.co.il/pictures/logo/logo6.png",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "האלון 16",
+          "addressLocality": "טל-אל",
+          "addressCountry": "IL"
+        },
+        "url": "https://drfinkelstein.co.il",
+        "telephone": "+972-55-564-1758",
+        "priceRange": "₪₪",
+        "description": "קליניקת אסתטיקה רפואית בהנהלת דוקטור גיל ואביה פינקלשטיין. בוטוקס, חומצה היאלורונית, PRP ועוד.",
+        "founder": [
+          {
+            "@type": "Person",
+            "name": "דוקטור גיל פינקלשטיין"
+          },
+          {
+            "@type": "Person",
+            "name": "דוקטור אביה פינקלשטיין"
+          }
+        ],
+        "medicalSpecialty": ["Dermatology", "CosmeticSurgery"]
+      }
+    </script>
+
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Aguafina+Script&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Playfair+Display:wght@700&display=swap"
@@ -215,22 +245,22 @@
           >
             <img
               src="pictures/clinic/clinic_4.jpeg"
-              alt="תמונה 1"
+              alt="תמונה 1- טיפול במרפאת דוקטור םינקלשטיין"
               class="about_slide left-1/2 top-1/2 translate-x-[-50%] translate-y-[-50%] absolute w-full h-full object-cover opacity-100 transition-opacity duration-700"
             />
             <img
               src="pictures/clinic/clinic_5.jpeg"
-              alt="תמונה 2"
+              alt="תמונה 2- טיפול במרפאת דוקטור פינקלשטיין"
               class="about_slide left-1/2 top-1/2 translate-x-[-50%] translate-y-[-50%] absolute w-full h-full object-cover opacity-100 transition-opacity duration-700"
             />
             <img
               src="pictures/clinic/clinic_6.jpeg"
-              alt="תמונה 3"
+              alt="תמונה 3- טיפול במרפאת דוקטור פינקלשטיין"
               class="about_slide left-1/2 top-1/2 translate-x-[-50%] translate-y-[-50%] absolute w-full h-full object-cover opacity-100 transition-opacity duration-700"
             />
             <img
               src="pictures/clinic/clinic_7.jpeg"
-              alt="תמונה 4"
+              alt="תמונה 4- טיפול במרפאת דוקטור פינקלשטיין"
               class="about_slide left-1/2 top-1/2 translate-x-[-50%] translate-y-[-50%] absolute w-full h-full object-cover opacity-100 transition-opacity duration-700"
             />
           </div>
