Add logo to google search.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         "@context": "https://schema.org",
         "@type": "MedicalClinic",
         "name": "מרפאות דוקטור פינקלשטיין",
-        "image": "https://drfinkelstein.co.il/pictures/logo/logo6.png",
+        "logo": "https://drfinkelstein.co.il/pictures/logo/logo5.png",
+        "image": "https://drfinkelstein.co.il/pictures/logo/logo5.png",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "האלון 16",
