Add favicon.ico .

--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
 
     <!-- Optional: your own styles if needed -->
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   </head>
   <body class="bg-gray-100 text-gray-800 pt-16 md:pt-36 pb-16">
     <!-- 🔝 Navigation Bar -->
